Changelog - to keep track of all relevant changes

please update the categories "new features" and "bugfixes" before a pull request merge!


version 1.0.1 - ????/??/??

new features:
production includes testing of NuRadioReco files

bugfixes:
	- fixed that Veff utility script didn't calculate effective volumes for individual triggers

version 1.0.0 - 2019/08/30 - first python 3 release